segments: null-returning Segments._unwrap; use it for the range-prefetch check
Segments.unwrap throws ISE when the target type is absent, so it can't be used as an
"is it an X?" test. Split out Segments._unwrap (returns null when absent); unwrap now
delegates to it and keeps throwing (external behaviour unchanged). ServerManager's
range-prefetch gate uses _unwrap(segment, LazySegment.class) instead of a hand-rolled
traversal — a plain null for the common (mmap) segment, no exception on the runner-build
path. Also drops some now-unused imports.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>